test/test_cases/invalid/syntaxErr/if/ifNothen.ast
-- Test: ifNothen.wacc

-- Uploaded file: 
---------------------------------------------------------------
# if missing then clause

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  else
    skip
  fi
end

---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 13:2 -- mismatched input 'else' expecting {'-', '*', '/', '%', '+', '<', '<=', '>=', '>', '==', '!=', '&&', '||', 'then'}
1 parser error(s) detected, no further compilation attempted.

